Change cover photo design

--- a/assets/sass/page/_index.scss
+++ b/assets/sass/page/_index.scss
@@ -7,10 +7,12 @@ div.banner{
     padding: 56px 0 0 10%;
     height:100vh;
     background-color: rgba(173, 216, 230, 0.3);
-    background-image: url(../../images/banner.JPG);
+    background-image: url(../../images/banner.webp);
     background-repeat: no-repeat;
-    background-position: -10em 0;
-    background-size: auto 100%;
+    background-position: center;
+    background-size: cover;
+    //background-position: -10em 0;
+    //background-size: auto 100%;
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -18,6 +20,7 @@ div.banner{
     @include breakpoint(mobile){
         padding-left:0;
         justify-content: flex-start;
+        background-position: -60px 0;
     }
 }
 
@@ -30,7 +33,13 @@ div.banner{
     width:60%;
     height:100%;
     padding:0 10%;
-    background-color: rgb(173, 216, 230);
+    //background-color: rgb(173, 216, 230, 0.1);
+
+
+    //width:100%;
+    color:#fff;
+    background-color: rgba(0, 0, 0, 0.6);
+    //backdrop-filter:blur(6px);
 
     @include breakpoint(mobile){
         width:100%;
@@ -38,7 +47,7 @@ div.banner{
         padding-left:5%;
         padding-right:5%;
         background-color: rgba(0, 0, 0, 0.6);
-        // backdrop-filter:blur(6px);
+        //backdrop-filter:blur(6px);
     }
 
     p{
