--- a/assets/sass/page/_index.scss
+++ b/assets/sass/page/_index.scss
@@ -546,10 +546,13 @@ section.projects{
         }
      
         li{
-            flex-grow: 1;
+            //flex-grow: 1;
+            width:250px;
             height:250px;
             background-color: rgba(255, 255, 255, 1);
-            transition: all 1s .3s;
+            //transition: all 1s .3s ease-out;
+            border:4px solid #f1f1f1;
+            box-shadow: 0 0 6px 1px rgba(0, 0, 0, 0.4);
         }
 
         li.web, li.ui{
@@ -560,6 +563,7 @@ section.projects{
             width:100%;
             height:100%;
             object-fit: cover;
+            border:1px solid rgba(51, 51, 51, 0.186);
             transition: transform .3s;
 
             &:hover{
