--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -521,6 +521,16 @@ div.banner {
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  position: relative;
+}
+div.banner::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  top: 0;
+  bottom: 0;
 }
 @media screen and (max-width: 480px) {
   div.banner {
@@ -539,8 +549,8 @@ div.banner {
   width: 60%;
   height: 100%;
   padding: 0 10%;
+  z-index: 10;
   color: #fff;
-  background-color: rgba(0, 0, 0, 0.6);
 }
 @media screen and (max-width: 480px) {
   .banner-content {
@@ -575,13 +585,8 @@ div.banner {
 .banner-content h1 span:nth-child(2) {
   display: block;
   width: max-content;
-  color: black;
+  color: #ffffff;
   opacity: 0.2;
-}
-@media screen and (max-width: 480px) {
-  .banner-content h1 span:nth-child(2) {
-    color: #fff;
-  }
 }
 
 .quick-contact {
@@ -1007,7 +1012,7 @@ section.projects .gallery li {
   width: 250px;
   height: 250px;
   background-color: rgb(255, 255, 255);
-  border: 4px solid #f1f1f1;
+  border: 8px solid #ffffff;
   box-shadow: 0 0 6px 1px rgba(0, 0, 0, 0.4);
 }
 section.projects .gallery li.web, section.projects .gallery li.ui {
