--- a/assets/sass/page/_index.scss
+++ b/assets/sass/page/_index.scss
@@ -17,6 +17,19 @@ div.banner{
     align-items: center;
     justify-content: flex-end;
 
+    position:relative;
+
+    &::after{
+        content: "";
+        width:100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.6);
+        position:absolute;
+        top:0;
+        bottom:0;
+
+        
+    }
     @include breakpoint(mobile){
         padding-left:0;
         justify-content: flex-start;
@@ -34,11 +47,11 @@ div.banner{
     height:100%;
     padding:0 10%;
     //background-color: rgb(173, 216, 230, 0.1);
-
+    z-index:10;
 
     //width:100%;
     color:#fff;
-    background-color: rgba(0, 0, 0, 0.6);
+    //background-color: rgba(0, 0, 0, 0.6);
     //backdrop-filter:blur(6px);
 
     @include breakpoint(mobile){
@@ -74,12 +87,8 @@ div.banner{
         &:nth-child(2){
             display: block;
             width:max-content;
-            color:black;
+            color:#ffffff;
             opacity:.2;
-
-            @include breakpoint(mobile){
-                color:#fff;
-            }
         }
     }
 }
@@ -551,7 +560,7 @@ section.projects{
             height:250px;
             background-color: rgba(255, 255, 255, 1);
             //transition: all 1s .3s ease-out;
-            border:4px solid #f1f1f1;
+            border:8px solid #ffffff;
             box-shadow: 0 0 6px 1px rgba(0, 0, 0, 0.4);
         }
 
