--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -624,12 +624,17 @@ div.banner::after {
   padding: 12px;
   position: fixed;
   right: 30px;
-  bottom: 80px;
+  bottom: 110px;
   transition: background-color 0.2s;
   opacity: 0;
   visibility: hidden;
-  transition: opacity 0.3s ease-in, visibility 0s 1s;
+  transition: opacity 0.3s ease-in, visibility 0s 0.4s;
   z-index: 100;
+}
+@media screen and (max-width: 480px) {
+  .popup {
+    bottom: 80px;
+  }
 }
 .popup-show {
   visibility: visible;
