Fix: change logo xd path

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -838,7 +838,7 @@ section.utils .utils-container .util .utility {
 .util .progressbar .progress-value.illustrator {
   width: 85%;
 }
-.util .progressbar .progress-value.lxd {
+.util .progressbar .progress-value.xd {
   width: 92%;
 }
 
