--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap");
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
+@import url("https://fonts.cdnfonts.com/css/stay-classy");
 *,
 ::before,
 ::after {
@@ -1064,4 +1065,4 @@ section.projects .gallery img:hover {
     transform: traslate(0, 0);
     transition: transform 0s, opacity 0s;
   }
-}
+}/*# sourceMappingURL=style.css.map */
